outputconfigurationstore: don't select generated modes as the default

They're not guaranteed to work, so choosing them as the default mode can
result in a display that doesn't light up or only shows garbage

BUG: 474915